--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 dash>=2.18
 plotly>=5.24
 pandas>=2.2
-numpy>=2.0
+numpy>=1.26,<2
 openpyxl>=3.1
 Flask>=3.0
 Werkzeug>=3.0
+xlrd>=2.0
+fpdf2>=2.7
+Pillow>=10.0,<11
+matplotlib>=3.8
+requests>=2.32
